# fet

./: .env  Dockerfile  docker-compose.yml  fet_build.sh  fet_docker.sh  fet_version.sh  readme.md
fet/: AUTHORS  CMakeLists.txt  CONTRIBUTORS  ChangeLog  Doxyfile  GUESTBOOK  LINKS  README  REFERENCES  SPONSORS  THANKS  TODO  TODO-NEW2  TRANSLATORS  fet-fusion.bat  fet-windows.bat  fet.desktop  fet.kdevelop  fet.pro  fet.xml
fet/doc/: FAQ.html  Instructions.html  algorithm.txt  fet.1  how-to-add-new-languages(translations).txt  how-to-implement-new-constraints.txt  time_constraints_documentation.html
fet/doc/adding-new-translations/: adding-new-translations.txt
fet/doc/algorithm/: algorithm-code.txt  algorithm-description.txt  algorithm-details.txt  improve-studentsmaxgapsperday.txt  improve-todo-item-197.txt  references.txt
fet/doc/algorithm-explanation/: algorithm.txt  pseudocode-of-algorithm.cpp
fet/doc/ar (Arabic)/: FET_Manual_Arabic.txt
fet/doc/emails-referring-to-algorithm/: email2-16-aug-2007.txt
fet/doc/es (Spanish - Espanol)/: instrucciones FET Spanish.html  instrucciones FET Spanish.odt
fet/doc/es_(Spanish_-_Espanol)/: instrucciones_FET_Spanish.txt
fet/doc/how-to-add-new-translations/: abbreviations.txt  how-to-add-new-languages(translations).txt
fet/doc/it (Italian - Italiano)/: FET FAQ Italian.htm  FET FAQ Italian.txt  FET Istruzioni Italian.htm  FET Istruzioni Italian.txt  fet faq.txt  fet istruzioni.txt
fet/doc/it_(Italian_-_Italiano)/: fet_faq.txt  fet_istruzioni.txt
fet/doc/manual/: FET-manual.en.v_0.7.html  FET-manual.en.v_0_7_b.html  FET-manual.en.v_0_7_c.html
fet/doc/pl/: FAQ_pl.html
fet/doc/ro (Romanian - Romana)/: tutorialimport.html
fet/doc/ro_(Romanian_-_Romana)/: tutorialimport.odt
fet/doc_old/: fet.1  how-to-implement-new-constraints.txt  time_constraints_subtags_documentation.html
fet/doc_old/fr/: FAQ_fr.html
fet/doc_old/pl/: time_constraints_documentation_pl.html
fet/examples/: readme.txt
fet/examples/Argentina/: Horario_ISJ.fet
fet/examples/Brazil/: Brazil.fet  Brazil_2_gaps_for_teachers.fet
fet/examples/Bulgaria/: Lom_high_school_2007-2008.fet
fet/examples/Denmark/: morten_piil.fet  small-school.fet
fet/examples/Greece/: 2008-2009.fet
fet/examples/Saudi-Arabia/: Arabic_althagher_1.fet  Arabic_saudi_1.fet  Arabic_saudi_2.fet  Arabic_saudi_3.fet  Arabic_saudi_examination.fet
fet/examples/Spain/: Spanish_school.fet
fet/examples/Sudan/: Khartoum-2010-02-13.fet
fet/icons/: fet.icns  fet.rc  readme-fet-svg.txt  readme-icons.txt
fet/results/: README  fetxml2latex.py  rooms.xsl  students.xsl  teachers.xsl
fet/sample_inputs/: sample11_morten_piil.fet  sample1_random.fet  sample2_simon_ghetti.fet  sample4_gibbon_tamba.fet  sample6_alessandro_brunel.fet  sample7_marek_jaszuk.fet  sample_Arabic_althagher.fet  sample_Arabic_althagher_2.fet  sample_Brazil.fet  sample_Brazil_FET5.fet  sample_Brazil_more_difficult_max_2_gaps_for_teachers.fet  sample_Brazil_more_difficult_max_2_gaps_for_teachers_FET5.fet  sample_Brazil_very_difficult(max_2_gaps_for_teachers)_FET5.fet  sample_Brazilia_FET5.fet  sample_Bulgaria_Lom_high_school_2007-2008.fet  sample_DGS_Pro_Germany.fet  sample_Hopwood.fet  sample_Hopwood_FET5.fet  sample_Pedagogic_High-School-Tg.Mures_2007-2008_sem1-d.fet  sample_Pedagogic_High_School_Tg.Mures_Romania_2006-2007.fet  sample_Pedagogic_High_School_Tg.Mures_Romania_2007-2008_sem1-a.fet  sample_faculty_of_computers_craiova_romania.fet  sample_faculty_of_computers_craiova_romania_FET5.fet  sample_german_secondary_school_FET5.fet  sample_german_secondary_school_complete.fet  sample_german_secondary_school_complete_FET5.fet  sample_german_secondary_school_complete_very_difficult.fet  sample_ian_fantom_FET5.fet  sample_italian_highschool.fet  sample_morten_piil.fet  sample_morten_piil_FET5.fet  sample_pedagogic_high_school_Tg.Mures_Romania.fet  sample_pedagogic_high_school_Tg.Mures_Romania_FET5.fet  sample_sacred_heart_college.fet  sample_sacred_heart_college_FET5.fet  sample_sacred_heart_college_more_difficult_max_6_gaps_per_teacher.fet  sample_sacred_heart_college_more_difficult_max_6_gaps_per_teacher_FET5.fet  sample_simon_ghetti_FET5.fet  t.fet  t_FET5.fet
fet/sample_inputs/Brazil/: Brazil.fet
fet/sample_inputs/Bulgaria/: Lom_high_school_2007-2008.fet
fet/sample_inputs/Italy/: highschool-Ancona.fet
fet/sample_inputs/Saudi-Arabia/: Arabic_althagher_2.fet  Arabic_althagher_3.fet
fet/sample_inputs/other samples - very difficult - take long time to solve/: Faculty of economics and business, Timisoara, Romania.fet  sample_Bethlen_Hungary_2007_2008_very_difficult_takes_hours_to_solve.fet
fet/sample_inputs/sample-Yew-Chung-International-School-secondary_takes-very-long-time-to-solve/: 2008-09(2)(2)(2.1.1).fet
fet/sample_inputs/sample_Greece/: 2008-2009-2009-01-26.fet
fet/sample_inputs/sample_Sacred_Heart_College/: sample_sacred_heart_college.fet
fet/sample_inputs/sample_Spanish_school/: sample_Spanish_school_by_silvia.fet
fet/sample_inputs/samples from South Africa - difficult - take long time/: Collegiate Junior School2.fet
fet/sample_inputs/samples_Brazil/: sample_Brazil.fet  (+1 more)
fet/sample_inputs_old/: sample10_nicholas_robinson.fet  sample12_sebastian_canagaratna.fet  sample13_abdul_hadi_kamel.fet  sample14_faculty_of_computers_craiova_romania.fet  sample15_Hopwood.fet  sample3_michael_towers.fet  sample5_alessandro_brunel.fet  sample8_ian_fantom.fet  sample9_liceul_pedagogic_Tg.Mures.fet  sample_german_secondary_school_complete.fet
fet/src/: CMakeLists.txt  src-cl.pro  src.pro
fet/tmp/: README
fet/translations/: fet_ar.qm  fet_ar.ts  fet_bg.qm  fet_bs.qm  fet_ca.qm  fet_ca.ts  fet_cs.qm  fet_cs.ts  fet_da.qm  fet_da.ts  fet_de.qm  fet_de.ts  fet_de_german translation note.txt  fet_el.qm  fet_el.ts  fet_en_GB.qm  fet_en_GB.ts  fet_es.qm  fet_es.ts  fet_eu.qm  fet_eu.ts  fet_fa.qm  fet_fa.ts  fet_fr.qm  fet_fr.ts  fet_gl.qm  fet_gl.ts  fet_he.qm  fet_he.ts  fet_hu.qm  fet_hu.ts  fet_id.qm  fet_id.ts  fet_it.qm  fet_it.ts  fet_ja.qm  fet_ja.ts  fet_lt.qm  fet_lt.ts  fet_mk.qm  (+41 more)
(+3818 files in other folders)
